mavlink-bindgen/tests/snapshots/e2e_snapshots__escaped_html.xml@escaped_html.rs.snap
---
source: mavlink-bindgen/tests/e2e_snapshots.rs
expression: contents
---
#![doc = "MAVLink escaped_html dialect."]
#![doc = ""]
#![doc = "This file was automatically generated, do not edit."]
#![allow(deprecated)]
#![allow(clippy::match_single_binding)]
#![allow(rustdoc::broken_intra_doc_links)]
#[allow(unused_imports)]
use bitflags::{bitflags, Flags};
#[allow(unused_imports)]
use mavlink_core::{types::CharArray, MavlinkVersion, Message, MessageData};
#[allow(unused_imports)]
use num_derive::{FromPrimitive, ToPrimitive};
#[allow(unused_imports)]
use num_traits::{FromPrimitive, ToPrimitive};
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_take_slice<'a>(input: &mut &'a [u8], len: usize) -> &'a [u8] {
    let (field, remaining) = input.split_at(len);
    *input = remaining;
    field
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_take<const N: usize>(input: &mut &[u8]) -> [u8; N] {
    let mut value = [0; N];
    value.copy_from_slice(__mavlink_take_slice(input, N));
    value
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_put_slice(output: &mut &mut [u8], value: &[u8]) {
    let (field, remaining) = core::mem::take(output).split_at_mut(value.len());
    field.copy_from_slice(value);
    *output = remaining;
}
#[allow(dead_code)]
#[inline(always)]
fn __mavlink_put<const N: usize>(output: &mut &mut [u8], value: [u8; N]) {
    __mavlink_put_slice(output, &value);
}
#[cfg(feature = "arbitrary")]
use arbitrary::Arbitrary;
#[cfg(feature = "serde")]
use serde::{Deserialize, Serialize};
#[cfg(feature = "ts-rs")]
use ts_rs::TS;
#[doc = "Message containing escaped HTML characters."]
#[doc = ""]
#[doc = "ID: 1"]
#[derive(Debug, Clone, PartialEq)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
pub struct ESCAPED_HTML_TEST_DATA {
    #[doc = "Version encoded as: `(Dev&0xff)<<24`."]
    pub version: u32,
}
impl ESCAPED_HTML_TEST_DATA {
    pub const ENCODED_LEN: usize = 4usize;
    pub const DEFAULT: Self = Self { version: 0_u32 };
    #[cfg(feature = "arbitrary")]
    pub fn random<R: rand::Rng>(rng: &mut R) -> Self {
        use arbitrary::{Arbitrary, Unstructured};
        let mut buf = [0u8; 1024];
        rng.fill_bytes(&mut buf);
        let mut unstructured = Unstructured::new(&buf);
        Self::arbitrary(&mut unstructured).unwrap_or_default()
    }
}
impl Default for ESCAPED_HTML_TEST_DATA {
    fn default() -> Self {
        Self::DEFAULT.clone()
    }
}
impl MessageData for ESCAPED_HTML_TEST_DATA {
    type Message = MavMessage;
    const ID: u32 = 1u32;
    const NAME: &'static str = "ESCAPED_HTML_TEST";
    const EXTRA_CRC: u8 = 161u8;
    const ENCODED_LEN: usize = 4usize;
    fn deser(
        _version: MavlinkVersion,
        __input: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        let avail_len = __input.len();
        let mut payload_buf;
        let mut buf: &[u8] = if let Some(payload) = __input.get(..Self::ENCODED_LEN) {
            payload
        } else {
            payload_buf = [0; Self::ENCODED_LEN];
            payload_buf[..avail_len].copy_from_slice(__input);
            &payload_buf
        };
        let mut __struct = Self::default();
        __struct.version = <u32>::from_le_bytes(__mavlink_take::<4usize>(&mut buf));
        debug_assert!(buf.is_empty());
        Ok(__struct)
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        let __available = bytes.len();
        if __available < Self::ENCODED_LEN {
            panic!(
                "buffer is too small (need {} bytes, but got {})",
                Self::ENCODED_LEN,
                __available,
            )
        }
        let mut __tmp: &mut [u8] = bytes;
        __mavlink_put::<4usize>(&mut __tmp, (self.version).to_le_bytes());
        if matches!(version, MavlinkVersion::V2) {
            let len = __available - __tmp.len();
            ::mavlink_core::utils::remove_trailing_zeroes(&bytes[..len])
        } else {
            __available - __tmp.len()
        }
    }
}
#[derive(Clone, PartialEq, Debug)]
#[cfg_attr(feature = "serde", derive(Serialize, Deserialize))]
#[cfg_attr(feature = "serde", serde(tag = "type"))]
#[cfg_attr(feature = "arbitrary", derive(Arbitrary))]
#[cfg_attr(feature = "ts-rs", derive(TS))]
#[cfg_attr(feature = "ts-rs", ts(export))]
#[repr(u32)]
pub enum MavMessage {
    #[doc = "Message containing escaped HTML characters."]
    #[doc = ""]
    #[doc = "ID: 1"]
    ESCAPED_HTML_TEST(ESCAPED_HTML_TEST_DATA),
}
impl MavMessage {
    pub const fn all_ids() -> &'static [u32] {
        &[1u32]
    }
    pub const fn all_messages() -> &'static [(&'static str, u32)] {
        &[(ESCAPED_HTML_TEST_DATA::NAME, ESCAPED_HTML_TEST_DATA::ID)]
    }
}
impl Message for MavMessage {
    fn parse(
        version: MavlinkVersion,
        id: u32,
        payload: &[u8],
    ) -> Result<Self, ::mavlink_core::error::ParserError> {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => {
                ESCAPED_HTML_TEST_DATA::deser(version, payload).map(Self::ESCAPED_HTML_TEST)
            }
            _ => Err(::mavlink_core::error::ParserError::UnknownMessage { id }),
        }
    }
    fn message_name(&self) -> &'static str {
        match self {
            Self::ESCAPED_HTML_TEST(..) => ESCAPED_HTML_TEST_DATA::NAME,
        }
    }
    fn message_id(&self) -> u32 {
        match self {
            Self::ESCAPED_HTML_TEST(..) => ESCAPED_HTML_TEST_DATA::ID,
        }
    }
    fn message_id_from_name(name: &str) -> Option<u32> {
        match name {
            ESCAPED_HTML_TEST_DATA::NAME => Some(ESCAPED_HTML_TEST_DATA::ID),
            _ => None,
        }
    }
    fn default_message_from_id(id: u32) -> Option<Self> {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => {
                Some(Self::ESCAPED_HTML_TEST(ESCAPED_HTML_TEST_DATA::default()))
            }
            _ => None,
        }
    }
    #[cfg(feature = "arbitrary")]
    fn random_message_from_id<R: rand::Rng>(id: u32, rng: &mut R) -> Option<Self> {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => {
                Some(Self::ESCAPED_HTML_TEST(ESCAPED_HTML_TEST_DATA::random(rng)))
            }
            _ => None,
        }
    }
    fn ser(&self, version: MavlinkVersion, bytes: &mut [u8]) -> usize {
        match self {
            Self::ESCAPED_HTML_TEST(body) => body.ser(version, bytes),
        }
    }
    fn ser_with_metadata(&self, version: MavlinkVersion, bytes: &mut [u8]) -> (usize, u32, u8) {
        match self {
            Self::ESCAPED_HTML_TEST(body) => (
                body.ser(version, bytes),
                ESCAPED_HTML_TEST_DATA::ID,
                ESCAPED_HTML_TEST_DATA::EXTRA_CRC,
            ),
        }
    }
    fn extra_crc(id: u32) -> u8 {
        match id {
            ESCAPED_HTML_TEST_DATA::ID => ESCAPED_HTML_TEST_DATA::EXTRA_CRC,
            _ => 0,
        }
    }
    fn target_system_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
    fn target_component_id(&self) -> Option<u8> {
        match self {
            _ => None,
        }
    }
}
